--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/flash-list": "^1.4.3",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-image": "~1.0.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
@@ -19,8 +21,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7",
-    "expo-image": "~1.0.1"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
