--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@shopify/flash-list": "^1.4.3",
+    "@shopify/flash-list": "1.4.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-image": "~1.0.1",
@@ -16,7 +16,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
