--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/ui-react-native": "^1.2.18",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
     "@shopify/flash-list": "1.4.0",
@@ -23,9 +24,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
