--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@shopify/flash-list": "1.4.0",
     "amazon-cognito-identity-js": "^6.2.0",
     "aws-amplify": "^5.2.4",
+    "core-js": "^3.30.2",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-image": "~1.0.1",
